[gd_scene load_steps=10 format=3 uid="uid://df63fi5u7xpjt"]

[ext_resource type="Script" path="res://src/lobby/lobby.gd" id="1_g8t6r"]
[ext_resource type="PackedScene" uid="uid://2uclu3gf4iyj" path="res://src/level/main_floor/main_floor.tscn" id="2_px70m"]
[ext_resource type="PackedScene" uid="uid://bapt74v2o7kig" path="res://src/lobby/player_card/player_card.tscn" id="3_87r7n"]
[ext_resource type="PackedScene" uid="uid://y52o5l4t82oi" path="res://src/lobby/lobby_location_setter/lobby_location_setter.tscn" id="6_mojxj"]
[ext_resource type="PackedScene" uid="uid://cgxmks3xaej68" path="res://src/steam_connector/steam_connector.tscn" id="6_qmxdg"]
[ext_resource type="PackedScene" uid="uid://lgxoth4h2cd0" path="res://src/lobby/lobby_name_setter/lobby_name_setter.tscn" id="7_7ee1f"]
[ext_resource type="PackedScene" uid="uid://bj8n2x3jkcbgs" path="res://src/relay_initializer/relay_initializer.tscn" id="8_tfeyi"]
[ext_resource type="PackedScene" uid="uid://vl432076bm8p" path="res://src/level/steam_lobby_chat_update/steam_lobby_chat_update.tscn" id="9_tuqyh"]
[ext_resource type="PackedScene" uid="uid://bv616iqaq6lgw" path="res://src/lobby_type_setter/lobby_type_setter.tscn" id="10_gp772"]

[node name="Lobby" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8t6r")
level = ExtResource("2_px70m")
player_card = ExtResource("3_87r7n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="HBoxContainer/ScrollContainer"]
_spawnable_scenes = PackedStringArray("res://src/lobby/player_card/player_card.tscn")
spawn_path = NodePath("../Cards")

[node name="Cards" type="VBoxContainer" parent="HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HostMenu" type="GridContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
columns = 2
metadata/_edit_group_ = true

[node name="LobbyNameLabel" type="Label" parent="HBoxContainer/HostMenu"]
layout_mode = 2
size_flags_horizontal = 8
text = "Name:"

[node name="LobbyNameLineEdit" type="LineEdit" parent="HBoxContainer/HostMenu"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Lobby Name"

[node name="LobbyTypeLabel" type="Label" parent="HBoxContainer/HostMenu"]
layout_mode = 2
size_flags_horizontal = 8
text = "Type:"
horizontal_alignment = 2

[node name="LobbyTypeOptionButton" type="OptionButton" parent="HBoxContainer/HostMenu"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Private"
popup/item_0/id = 0
popup/item_1/text = "Friends Only"
popup/item_1/id = 1
popup/item_2/text = "Public"
popup/item_2/id = 2

[node name="Spacer" type="Control" parent="HBoxContainer/HostMenu"]
layout_mode = 2

[node name="StartButton" type="Button" parent="HBoxContainer/HostMenu"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="SteamConnector" parent="." instance=ExtResource("6_qmxdg")]

[node name="LobbyLocationSetter" parent="." instance=ExtResource("6_mojxj")]

[node name="LobbyNameSetter" parent="." instance=ExtResource("7_7ee1f")]

[node name="RelayInitializer" parent="." instance=ExtResource("8_tfeyi")]

[node name="SteamLobbyChatUpdate" parent="." instance=ExtResource("9_tuqyh")]

[node name="LobbyTypeSetter" parent="." instance=ExtResource("10_gp772")]

[connection signal="close_connection_requested" from="." to="SteamConnector" method="close_connection"]
[connection signal="text_changed" from="HBoxContainer/HostMenu/LobbyNameLineEdit" to="LobbyNameSetter" method="set_lobby_name"]
[connection signal="item_selected" from="HBoxContainer/HostMenu/LobbyTypeOptionButton" to="LobbyTypeSetter" method="set_lobby_type"]
[connection signal="pressed" from="HBoxContainer/HostMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="connection_closed" from="SteamConnector" to="." method="_on_connection_closed"]
[connection signal="lobby_name_on_ready" from="LobbyNameSetter" to="HBoxContainer/HostMenu/LobbyNameLineEdit" method="set_text"]
[connection signal="relay_initialized" from="RelayInitializer" to="LobbyLocationSetter" method="set_lobby_location"]
[connection signal="lobby_type_on_ready" from="LobbyTypeSetter" to="HBoxContainer/HostMenu/LobbyTypeOptionButton" method="select"]
